--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,5 @@
 #列出所有服务器地址，nginx 自动均衡分发请求到各个服务器。
+#frontends是一个函数，同一个ngix的配置库下，只能有一个，否则无法启动
 upstream frontends {
     ip_hash;
     server 127.0.0.1:8086;
@@ -21,5 +22,5 @@ server {
         expires     1d;
         add_header  Cache-Control public;
         access_log  off;
- }
+  }
 }
