--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,9 +1,8 @@
 #公共配置
 [qiniu]
 host=p2otxz81j.bkt.clouddn.com
+hostBase=
 accessKey=YwBMfAjdDqGQMWrwWgQrkHoES8h_sfQ4oJT7esdG
-secretKey=b-laMNJSLbOyGj-3W7qfyFOGWEtvinnaeOLZtAs2-
+secretKey=b-laMNJSLbOyGj-W7qfyFOGWEtvinnaeOLZtAs2-
 bucket=alphacms
 folder=test
-isUseHttps=false
-zone=huaNan
