--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,40 @@
 #列出所有服务器地址，nginx 自动均衡分发请求到各个服务器。
 #frontends是一个函数，同一个ngix的配置库下，只能有一个，否则无法启动
+
+#https
+upstream frontends {
+    ip_hash;
+    server 127.0.0.1:8086;
+}
+server {
+    listen      443;
+    server_name pack-go.dcwen.top;
+      ssl on;
+        ssl_certificate /usr/local/nginx/conf/2_.qaqgame.com.crt;
+        ssl_certificate_key /usr/local/nginx/conf/1_.qaqgame.com.key;
+        ssl_session_timeout 5m;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    location / {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://frontends;
+    }
+
+    #静态资源交由nginx管理
+    location /static {
+        root        /var/www/mydomain/web;
+        expires     1d;
+        add_header  Cache-Control public;
+        access_log  off;
+  }
+}
+
+#http
 upstream frontends {
     ip_hash;
     server 127.0.0.1:8086;
