--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,4 @@
-#wss://dc-go.qaqgame.com/wss访问地址
+#https协议下wss://dc-go.qaqgame.com/wss访问地址
 upstream dc-go {
     ip_hash;
     server 127.0.0.1:8056;
