--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -23,7 +23,7 @@ server {
     }
     location /wss {
        proxy_pass http://dc-go/socket; # 代理到上面的地址去，socket是服务路由
-       proxy_read_timeout 60s;
+       proxy_read_timeout 3600s;#长链接稳定时间
        proxy_set_header Host $host;
        proxy_set_header X-Real_IP $remote_addr;
        proxy_set_header X-Forwarded-for $remote_addr;
