优化项目结构

--- a/conf/app.dev.ini
+++ b/conf/app.dev.ini
@@ -2,15 +2,15 @@
 [server]
 #为空则默认为0.0.0.0
 HTTP_ADDR=127.0.0.1
-HTTP_PORT=8089
+HTTP_PORT=8011
 READ_TIMEOUT=60
 WRITE_TIMEOUT=60
 
 [database]
 TYPE=mysql
 HOST=localhost:3306
-DB=test
-TABLE_PREFIX=alpha_
+DB=p11test1
+TABLE_PREFIX=
 USER=root
 PASSWORD=root
 
